--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -47,10 +47,8 @@
             <span class="out-of-stock"><%= Spree.t(:out_of_stock) %></span>
           <% end %>
         </div>
+<%= current_order.line_item.variant.to_yaml %>
 
-<% current_order.line_items.each do |item| %>
-<%= item.product.variant_id %>
-  <% end %>
 			
         <div class="add-to-cart">
           <%= number_field_tag :quantity, 1, :class => 'title', :min => 1,:max=>1,:readonly => true %>
