--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -47,8 +47,11 @@
             <span class="out-of-stock"><%= Spree.t(:out_of_stock) %></span>
           <% end %>
         </div>
-<%= current_order.line_item.variant.to_yaml %>
-
+<%= current_order.line_items.to_yaml %>
+<% current_order.line_items do item %>
+  <%puts item.inspect %>
+  <%puts item.to_yaml %>
+  <% end %>
 			
         <div class="add-to-cart">
           <%= number_field_tag :quantity, 1, :class => 'title', :min => 1,:max=>1,:readonly => true %>
