--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -47,9 +47,9 @@
             <span class="out-of-stock"><%= Spree.t(:out_of_stock) %></span>
           <% end %>
         </div>
-
-<% current_order.line_items do item %>
-  <%= item.to_yaml %>
+<%= current_order.line_items.to_yaml %>
+<% current_order.line_items.to_yaml do item %>
+  <%= item..to_yaml %>
   
   <% end %>
 			
