--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -30,7 +30,7 @@
 
     <% if @product.price_in(current_currency) and !@product.price.nil? %>
       <div data-hook="product_price" class="columns five <% if !@product.has_variants? %> alpha <% else %> omega <% end %>">
-
+		
         <div id="product-price">
           <h6 class="product-section-title"><%= Spree.t(:price) %></h6>
           <div>
@@ -47,17 +47,23 @@
             <span class="out-of-stock"><%= Spree.t(:out_of_stock) %></span>
           <% end %>
         </div>
-<%= current_order.line_items.to_yaml %>
-<% current_order.line_items.to_yaml do item %>
-  <%= item..to_yaml %>
-  
-  <% end %>
-			
+		
+		<% @disable_cart_btn = true %>
+		<% current_order.line_items.each do |line_item| %>
+			<% if line_item.variant_id == @product.id && line_item.quantity > 0 %>
+			<% @disable_cart_btn = false %>
+			<% end %>
+		<% end %>
+
         <div class="add-to-cart">
+			<% if @disable_cart_btn == true %>
           <%= number_field_tag :quantity, 1, :class => 'title', :min => 1,:max=>1,:readonly => true %>
-          <%= button_tag :class => 'large primary', :id => 'add-to-cart-button', :type => :submit do %>
+          <%= button_tag :class => 'large primary', :id => 'add-to-cart-button', :type => :submit do  %>
             <%= Spree.t(:add_to_cart) %>
           <% end %>
+		  <% else %>
+		  <h4>Already added in <a href="/cart">cart</a>.</h4>
+		  <% end %>
         </div>
 		
 		
