--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -49,8 +49,10 @@
         </div>
 		
 		<% @disable_cart_btn = true %>
+		<%= current_order.line_items.variant_id %>
+		
 		<% current_order.line_items.each do |line_item| %>
-			<% if line_item.variant_id == @product.id && line_item.quantity > 0 %>
+			<% if line_item.variant_id == @product.id && line_item.quantity >= 0 %>
 			<% @disable_cart_btn = false %>
 			<% end %>
 		<% end %>
