--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -50,9 +50,8 @@
 		
 		<% @disable_cart_btn = true %>
 		
-		
 		<% current_order.line_items.each do |line_item| %>
-			<% if line_item.variant_id == @product.id && line_item.quantity >=1  %>
+			<% if line_item.variant_id == @product.id && line_item.quantity > 1 %>
 			<% @disable_cart_btn = false %>
 			<% end %>
 		<% end %>
