--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -50,6 +50,9 @@
 		
 		<% disable_cart_btn = true %>
 		<% if current_order %>
+			qty: <%= line_item.quantity %><br />
+			variant_id: <%= line_item.variant_id %><br />
+			product_id: <%= product.id %>
 			<% current_order.line_items.each do |line_item| %>
 				<% if line_item.variant_id == @product.id && line_item.quantity > 0 %>
 				<% disable_cart_btn = false %>
