--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -48,10 +48,23 @@
           <% end %>
         </div>
 		
-        <div class="add-to-cart">
-			<%= number_field_tag :quantity, 1, :class => 'title', :min => 1,:max=>1,:readonly => true %>
-			<%= button_tag :class => 'large primary', :id => 'add-to-cart-button', :type => :submit do  %>
+		<% disable_cart_btn = true %>
+		<% if current_order %>
+			<% current_order.line_items.each do |line_item| %>
+				<% if line_item.variant_id == @product.id && line_item.quantity > 0 %>
+				<% disable_cart_btn = false %>
+				<% end %>
+ 			<% end %>
+ 		<% end %>
+		
+        <div class="add-to-cart">	
+			<% if disable_cart_btn == true %>
+			  <%= number_field_tag :quantity, 1, :class => 'title', :min => 1,:max=>1,:readonly => true %>
+			  <%= button_tag :class => 'large primary', :id => 'add-to-cart-button', :type => :submit do  %>
 				<%= Spree.t(:add_to_cart) %>
+			  <% end %>
+			<% else %>
+				<h4>Already added in <a href="/cart">cart</a>.</h4>
 			<% end %>
         </div>
 		
