--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -51,7 +51,7 @@
 		<% disable_cart_btn = true %>
 		<% if current_order %>
 			<% current_order.line_items.each do |line_item| %>
-				<% if line_item.variant_id == @product.id && line_item.quantity > 0 %>
+				<% if (line_item.variant_id == @product.id || line_item.variant_id == @product.master.id ) && line_item.quantity > 0 %>
 				<% disable_cart_btn = false %>
 				<% end %>
  			<% end %>
