updated product page changes

--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -41,8 +41,9 @@
 
         </div>
 
+        <% if false %>
         <%= render :partial => 'taxons' %>
-
+        <% end %>
       </div>
     </div>
 
