--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -125,17 +125,25 @@ Irvine CA, 92604 USA.<br>
 <div style="display:none;" class="main-cart-popup">
     <div id="addtocart-popup">
 	<div class="cart-popup-content">
-	<h2>Watteam</h2>
-	Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
+	<h2>Dear cyclist,</h2>
+  <p>Watteam has leveled the playing field with the first pro-level power meter that won't break the bank. We were able to achieve that using smart built-in technology that allows the biker to entirely self-install and calibrate the PowerBeat device. By pioneering this new era with us, we ask that early adopters have some basic technical skills:</p>
+  <ul>
+    <li>Removing the pedals</li>
+    <li>Gluing the sensors</li>
+    <li>Installing the comp units</li>
+    <li>Calibrating the device</li>
+  </ul>
+  <p>The installation process takes about 30 minutes and is done using the app, which has embedded videos that clearly explain every step.  You may refer to our Support page to view the installation videos.</p>
+  <p>Before purchasing POWERBEAT, please make sure that you possess the required technical skills.</p>
+
 	<div class="popup-video-cart">
 	<iframe width="100%" src="https://www.youtube.com/embed/r8aEii-VD_c" frameborder="0" allowfullscreen></iframe>
 	</div>
 	</div>
 	<div class="cart-popup-btn">
-	
-	<button class="large primary" id="add-to-cart-btn" name="button" type="button">I understand</button> 	<button class="large primary" id="no-thanks-btn" name="button" type="button">No thanks!</button>
+	<button class="large primary" id="add-to-cart-btn" name="button" type="button">Agree &amp; Continue</button>
+  <button class="large primary" id="no-thanks-btn" name="button" type="button">No thanks</button>
 	</div>
-	
     </div>
 </div>
 
