--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -54,12 +54,12 @@ Irvine CA, 92604 USA.<br>
 
 <div class="mc-field-group">
 
-	<label for="mce-FNAME">Name:<span class="asterisk">*</span>
+	<label for="mce-FNAME">Name:
 
 </label>
        	<input type="text" value="" name="first_name" class="required" id="mce-FNAME" placeholder="">
 		
-		<label for="mce-EMAIL">Email:<span class="asterisk">*</span>
+		<label for="mce-EMAIL">Email:
 
 </label>
 	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="">
