--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -33,7 +33,8 @@
 		
         <div id="product-price">
           <h6 class="product-section-title"><%= Spree.t(:price) %></h6>
-          <div>
+          <div class="dollar">
+            <span class="only">only</span>
             <span class="price selling" itemprop="price">
               <%= display_price(@product) %>
             </span>
@@ -51,7 +52,7 @@
 		<% disable_cart_btn = true %>
 		<% if current_order %>
 			<% current_order.line_items.each do |line_item| %>
-				<% if (line_item.variant_id == @product.id || line_item.variant_id == @product.master.id ) && line_item.quantity > 0 %>
+				<% if (line_item.variant_id == @product.id || line_item.variant_id == @product.master.id ) && line_item.quantity > 2 %>
 				<% disable_cart_btn = false %>
 				<% end %>
  			<% end %>
@@ -59,7 +60,9 @@
 		
         <div class="add-to-cart">	
 			<% if disable_cart_btn == true %>
+      <span class="dnone">
 			  <%= number_field_tag :quantity, 1, :class => 'title', :min => 1,:max=>1,:readonly => true %>
+      </span>
 			  <%= button_tag :class => 'large primary', :id => 'add-to-cart-button', :type => :submit do  %>
 				<%= Spree.t(:add_to_cart) %>
 			  <% end %>
