--- a/app/views/spree/products/index.html.erb
+++ b/app/views/spree/products/index.html.erb
@@ -1,3 +1,7 @@
+<script>
+window.location.href = "/products/pbprometer1";
+$('body').css('display','none');
+</script>
 <% if params[:keywords] %>
 
   <div data-hook="search_results">
