--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -34,6 +34,7 @@
         <div id="product-price">
           <h6 class="product-section-title"><%= Spree.t(:price) %></h6>
           <div class="dollar">
+            
             <span class="only">only</span>
             <span class="price selling" itemprop="price">
               <%= display_price(@product) %>
@@ -80,3 +81,43 @@
     <% end %>
   </div>
 <% end %>
+<div style="display:none;" class="main-cart-popup">
+  <div id="addtocart-popup">
+  <div class="cart-popup-content">
+  <div>Dear cyclist,<br />
+  Watteam has leveled the playing field with the first pro-level power meter that won't break the bank. We were able to achieve that using smart built-in technology that allows the biker to entirely self-install and calibrate the PowerBeat device. By pioneering this new era with us, we ask that early adopters have some basic technical skills:</div>
+  <ul>
+    <li>Removing the pedals</li>
+    <li>Gluing the sensors</li>
+    <li>Installing the comp units</li>
+    <li>Calibrating the device</li>
+  </ul>
+  <div>The installation process takes about 30 minutes and is done using the app, which has embedded videos that clearly explain every step.  You may refer to our <a href="http://watteam.com/support/">Support page</a> to view the installation videos.</div>
+  <div>Before purchasing POWERBEAT, please make sure that you possess the required technical skills.</div>
+  </div>
+  <div class="cart-popup-btn">
+  <button class="large primary" id="add-to-cart-btn" name="button" type="button">Agree &amp; Continue</button>
+  <button class="large primary" id="no-thanks-btn" name="button" type="button">No thanks</button>
+  </div>
+    </div>
+</div>
+<script>
+$( document ).ready(function() {
+$("#add-to-cart-button").click(function(event){
+    event.preventDefault();
+  $.fancybox({
+         'type': 'inline',
+        'href': '#addtocart-popup'
+    });
+});
+
+$("#add-to-cart-btn").click(function(event){
+$( "#cartform" ).submit();
+});
+
+$("#no-thanks-btn").click(function(event){
+$.fancybox.close();
+});
+
+});
+</script>
