--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -49,7 +49,28 @@
             <br />
             <span class="out-of-stock"><%= Spree.t(:out_of_stock) %></span>
             <% end %>
-             <%= render :partial => 'out_of_stock' %>
+             <div style="display:none;" class="out-of-stock-popup">
+  <div id="out-of-stock-popup">
+  <div class="cart-popup-content">
+  <div>
+  We're sorry but the first batch of POWRBEATs has sold out more quickly than expected. The next batch will be shipped by Spring 2016.<br />  
+  You may make your order now to secure a unit, or simply sign up to receive updates.
+  </div>
+  <div class="cart-popup-btn">
+  <a href="#" id="pre-order">Pre-order now</a>
+  <a href="#">Receive updates</a>
+  </div>
+    </div>
+</div>
+<script>
+$( document ).ready(function() {
+  $.fancybox({
+         'type': 'inline',
+        'href': '#out-of-stock-popup'
+    });
+
+});
+</script>
           <% end %>
         </div>
 		
