--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -57,8 +57,8 @@
   You may make your order now to secure a unit, or simply sign up to receive updates.
   </div>
   <div class="cart-popup-btn">
-  <a href="#" id="pre-order">Pre-order now</a>
-  <a href="#">Receive updates</a>
+  <a href="#PowerbeatPhase2" class="large primary">Pre-order now</a>
+  <a href="http://watteam.com" class="large primary">Receive updates</a>
   </div>
     </div>
 </div>
