--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -57,8 +57,8 @@
   You may make your order now to secure a unit, or simply sign up to receive updates.
   </div>
   <div class="cart-popup-btn">
-  <a href="#PowerbeatPhase2" class="large primary">Pre-order now</a>
-  <a href="http://watteam.com" class="large primary">Receive updates</a>
+  <button onclick="windowl.location.href='#PowerbeatPhase2'" class="large primary">Pre-order now</button>
+  <button onclick="windowl.location.href='http://watteam.com'" class="large primary" style="float:right;">Receive updates</button>
   </div>
     </div>
 </div>
@@ -88,11 +88,9 @@ $( document ).ready(function() {
       <span class="dnone">
 			  <%= number_field_tag :quantity, 1, :class => 'title', :min => 1,:max=>1,:readonly => true %>
       </span>
-      <div class="cartbutton">
 			  <%= button_tag :class => 'large primary', :id => 'add-to-cart-button', :type => :submit do  %>
-				Buy Now
+				<%= Spree.t(:add_to_cart) %>
 			  <% end %>
-      </div>
 			<% else %>
 				<h4>Already added in <a href="/cart">cart</a>.</h4>
 			<% end %>
