--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -67,7 +67,8 @@
 $( document ).ready(function() {
   $.fancybox({
          'type': 'inline',
-        'href': '#out-of-stock-popup'
+        'href': '#out-of-stock-popup',
+        'centerOnScroll': true
     });
 
 });
@@ -132,7 +133,8 @@ $("#add-to-cart-button").click(function(event){
     event.preventDefault();
   $.fancybox({
          'type': 'inline',
-        'href': '#addtocart-popup'
+        'href': '#addtocart-popup',
+        'centerOnScroll': true
     });
 });
 
