--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -68,7 +68,8 @@ $( document ).ready(function() {
   $.fancybox({
          'type': 'inline',
         'href': '#out-of-stock-popup',
-        'centerOnScroll': true
+        'centerOnScroll': true,
+        'autoDimensions':true
     });
 
 });
@@ -134,7 +135,8 @@ $("#add-to-cart-button").click(function(event){
   $.fancybox({
          'type': 'inline',
         'href': '#addtocart-popup',
-        'centerOnScroll': true
+        'centerOnScroll': true,
+        'autoDimensions':true
     });
 });
 
