--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -50,4 +50,105 @@
       </div>
     </div>
 
+    <script>
+$(document).ready(function(){
+  
+  $('ul.tabs li').click(function(){
+    var tab_id = $(this).attr('data-tab');
+
+    $('ul.tabs li').removeClass('current');
+    $('.tab-content').removeClass('current');
+
+    $(this).addClass('current');
+    $("#"+tab_id).addClass('current');
+  })
+
+})
+</script>
+<ul class="tabs">
+    <li class="tab-link current" data-tab="tab-1">Overview</li>
+    <li class="tab-link" data-tab="tab-2">Benefits</li>
+    <li class="tab-link" data-tab="tab-3">Specs</li>
+    <li class="tab-link" data-tab="tab-4">In the box</li>
+</ul>
+<div id="tab-1" class="tab-content current">
+<p><strong>With POWERBEAT, you can have it all.</strong>  The self-contained kit puts an end to factory installation and calibration. It's packed with two patent-pending mechanical sensors and intelligent processing units – that when attached to the cranks<sup>1</sup> deliver real (not estimated) left and right leg power metrics.  POWERBEAT is light-weight, durable and consistently accurate enough to be used by professional cyclists – yet affordable enough for amateur and unsponsored cyclists. It's also the first to come with an 80-hour rechargeable battery, and works with any BLE head unit<sup>2</sup>, even a BTE smartphone. <br />
+At last, a professional-grade power meter that anyone can afford!
+<br />
+Notes: 
+1)  POWERBEAT 1.0 supports hollow aluminum cranks only.  Future versions will support all additional cranks, including Carbon.
+2)  POWERBEAT 1.0 works with standard BLE head units, such as Suunto Ambit, or head units that support two sensor measurements, such as Polar V800.
+</p>
+</div>
+<div id="tab-2" class="tab-content">
+<p><strong>Real left &amp; right power measurement</strong><br />
+The sensors attach independently to each crank arm. You receive actual (not estimated) left and right leg power metrics, which help in identifying weaknesses, correcting them, and training to your full potential.</p>
+
+<p><strong>Light weight</strong><br />
+The mechanical sensor and its processing comp unit weigh less than 24 grams when attached to each of the crank arms – about the weight of a large bite of an apple!</p>
+
+<p><strong>Self-install</strong><br />
+Installation requires only basic technical skills. All the necessary tools are included in the box, with the exception of the Allen key or wrench necessary for removing the pedals. The downloadable app has clear instructional videos that will guide you every step of the way. The entire installation takes about 30 minutes, though the sensors need to dry for 24 hours after they're glued.</p>
+
+<p><strong>Low maintenance</strong><br />
+There is no need for factory calibration or service centers.  Everything from installation to calibration and firmware updates is done through the user-friendly app.</p>
+
+<p><strong>Weather resistant</strong><br />
+The device is durable enough to sustain dust and harsh weather conditions. It even has a built-in temperature compensation mechanism, so the power figures remain consistent regardless of the weather.</p>
+
+<p><strong>Weather resistant</strong><br />
+POWERBEAT sports the industry's first ecological battery. It comes equipped with a charger and the battery lasts about 80 hours. A notification is sent to the head unit when the battery runs low.</p>
+
+</div>
+<div id="tab-3" class="tab-content">
+<p>Below are the technical specifications of POWERBEAT 1.0:</p>
+<table>
+  <tr>
+    <td>Power metrics:</td><td>Both right and left leg data</td>
+  </tr>
+  <tr>
+    <td>Weight:</td><td>24 grams for each crank</td>
+  </tr>
+  <tr>
+    <td>Communication:</td><td>ANT+ and BLE</td>
+  </tr>
+  <tr>
+    <td>Rechargeable battery:</td><td>Lipo 3.6V; 80 hours of usage; 2 hours to recharge</td>
+  </tr>
+  <tr>
+    <td>Waterproof:</td><td>IP64 certified</td>
+  </tr>
+  <tr>
+    <td>Compatible cranks:</td><td>Hollow aluminum (Click here for full list)</td>
+  </tr>
+  <tr>
+    <td>Mobile apps:</td><td>iOS and Android</td>
+  </tr>
+</table>
+    
+</div>
+<div id="tab-4" class="tab-content">
+<p>Below is a list of components that are included in the box:</p>
+<p>
+2 Comp Units<br />
+2 Sensors<br/>
+1 Calibration tool<br />
+1 Gluing tool<br />
+1 Charger with cable<br />
+2 Empty water bags<br />
+2 Adhesive strips<br />
+4 Washers<br />
+4 Alcohol pads<br />
+2 Sand papers<br />
+1 Glue tube<br />
+1 Glue remover<br />
+1 User's Manual<br />
+<br />
+Box size:   27*22.5*7 cm<br />
+Box weight: 700 grams<br />
+</p>
+
+   
+</div>
+
   </div>
