--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -60,7 +60,7 @@ $(document).ready(function(){
     $('.tab-content').removeClass('current');
 
     $(this).addClass('current');
-    $("#"+tab_id).addClass('current');
+    $("#"+tab_id).addClass('current-tab');
   })
 
 })
