--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -66,9 +66,10 @@
 <script>
 $( document ).ready(function() {
   $.fancybox({
-         'type': 'inline',
+        'type': 'inline',
         'href': '#out-of-stock-popup',
-        'centerOnScroll': true,
+        'width': 720px;
+        'centerOnScroll': false,
         'autoDimensions':true
     });
 
@@ -135,7 +136,8 @@ $("#add-to-cart-button").click(function(event){
   $.fancybox({
          'type': 'inline',
         'href': '#addtocart-popup',
-        'centerOnScroll': true,
+        'width': 720px;
+        'centerOnScroll': false,
         'autoDimensions':true
     });
 });
