--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -68,7 +68,7 @@ $( document ).ready(function() {
   $.fancybox({
         'type': 'inline',
         'href': '#out-of-stock-popup',
-        'width': 720px;
+        'width': '720px';
         'centerOnScroll': false,
         'autoDimensions':true
     });
@@ -136,7 +136,7 @@ $("#add-to-cart-button").click(function(event){
   $.fancybox({
          'type': 'inline',
         'href': '#addtocart-popup',
-        'width': 720px;
+        'width': '720px';
         'centerOnScroll': false,
         'autoDimensions':true
     });
