--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -57,7 +57,7 @@ $(document).ready(function(){
     var tab_id = $(this).attr('data-tab');
 
     $('ul.tabs li').removeClass('current');
-    $('.tab-content').removeClass('current');
+    $('.tab-content').removeClass('current-tab');
 
     $(this).addClass('current');
     $("#"+tab_id).addClass('current-tab');
