--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -71,7 +71,8 @@ $(document).ready(function(){
     <li class="tab-link" data-tab="tab-3">Specs</li>
     <li class="tab-link" data-tab="tab-4">In the box</li>
 </ul>
-<div id="tab-1" class="tab-content current">
+<div class="tab_data">
+<div id="tab-1" class="tab-content current-tab">
 <p><strong>With POWERBEAT, you can have it all.</strong>  The self-contained kit puts an end to factory installation and calibration. It's packed with two patent-pending mechanical sensors and intelligent processing units – that when attached to the cranks<sup>1</sup> deliver real (not estimated) left and right leg power metrics.  POWERBEAT is light-weight, durable and consistently accurate enough to be used by professional cyclists – yet affordable enough for amateur and unsponsored cyclists. It's also the first to come with an 80-hour rechargeable battery, and works with any BLE head unit<sup>2</sup>, even a BTE smartphone. <br />
 At last, a professional-grade power meter that anyone can afford!
 <br />
@@ -147,8 +148,6 @@ POWERBEAT sports the industry's first ecological battery. It comes equipped with
 Box size:   27*22.5*7 cm<br />
 Box weight: 700 grams<br />
 </p>
-
-   
 </div>
-
+</div>
   </div>
