--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -92,9 +92,12 @@ $( document ).ready(function() {
       <span class="dnone">
 			  <%= number_field_tag :quantity, 1, :class => 'title', :min => 1,:max=>1,:readonly => true %>
       </span>
-			  <%= button_tag :class => 'large primary', :id => 'add-to-cart-button', :type => :submit do  %>
-				<%= Spree.t(:add_to_cart) %>
-			  <% end %>
+
+        <% if session[:valid_sitelogin] == true %>
+  			  <%= button_tag :class => 'large primary', :id => 'add-to-cart-button', :type => :submit do  %>
+  				<%= Spree.t(:add_to_cart) %>
+  			  <% end %>
+        <% end %>  
 			<% else %>
 				<h4>Already added in <a href="/cart">cart</a>.</h4>
 			<% end %>
@@ -109,6 +112,12 @@ $( document ).ready(function() {
     <% end %>
   </div>
 <% end %>
+SiteLogin: <%= session[:valid_sitelogin] %>
+<% if !session[:valid_sitelogin] || session[:valid_sitelogin]==false %>
+<!-- load popup for password -->
+<%= render :partial => 'sitelogin/new' %>
+<% end %>
+
 <div style="display:none;" class="main-cart-popup">
   <div id="addtocart-popup">
   <div class="cart-popup-content">
