--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -12,7 +12,8 @@ $('#mobile-menu-open').click(function() {
 <header id="header" class="row" data-hook>
 <div class="header-logo-main">
   <figure id="logo" class="columns six" data-hook><a href="http://watteam.com"><%= image_tag 'spree_50.png' %></a><span class="logo-sub-t">&nbsp;&nbsp; Innovation with a spin  </span><!--<span class="top-phone-no"><%= image_tag 'phone-contact.png' %><p>1-877-213-8399</p> </span>--></figure>
-  </div>
+  <a href="/cart" >Cart <img src="<%= asset_path('cart.png') %>" alt="cart" /></a>
+ </div>
   <div class="main-menu-top">
   <!--<%= render :partial => 'spree/shared/nav_bar' %>
   <%= render :partial => 'spree/shared/main_nav_bar' if store_menu? %>-->
