--- a/app/views/sitelogin/_new.html.erb
+++ b/app/views/sitelogin/_new.html.erb
@@ -1,7 +1,7 @@
 
 <div align="center" style="float:left;display:none;" id="sitelogin_popup">
   
-  <div align="left">
+  <div align="left" class="">
     <h1>Exclusive<br />
       Pre-Order</h1>
       <p>Enter your passcode below for early access</p>
