update login box

--- a/app/views/sitelogin/_new.html.erb
+++ b/app/views/sitelogin/_new.html.erb
@@ -20,6 +20,8 @@
 jQuery( document ).ready(function($) {
 
   $.fancybox({
+        'padding': 0,
+        'margin': 4,
         'type': 'inline',
         'href': '#sitelogin_popup',
         'width': '600px',
