--- a/app/views/sitelogin/_new.html.erb
+++ b/app/views/sitelogin/_new.html.erb
@@ -11,7 +11,7 @@
   <%= form_tag '/sitelogin', method: "post" do %>
     <%= password_field_tag :site_password, "", :required => true, :placeholder => 'Enter passcode here' %>
     <div>
-      <%= submit_tag 'Site Login', :class=> "btn primary" %>
+      <%= submit_tag 'Submit', :class=> "btn primary" %>
     </div>
   <% end %>
   </div>
