--- a/app/views/spree/orders/_line_item.html.erb
+++ b/app/views/spree/orders/_line_item.html.erb
@@ -23,8 +23,14 @@
     <td class="cart-item-price" data-hook="cart_item_price">
       <%= line_item.single_money.to_html %>
     </td>
+    <% 
+    @disable_input_status = false 
+    if line_item.quantity >=2 
+      @disable_input_status = true
+    end
+    %>
     <td class="cart-item-quantity" data-hook="cart_item_quantity">
-      <%= item_form.number_field :quantity, :min => 0, :class => "line_item_quantity", :size => 5, :readonly => true, :max=>1 %>
+      <%= item_form.number_field :quantity, :min => 0, :class => "line_item_quantity", :size => 5, :readonly => @disable_input_status, :max=>2 %>
     </td>
     <td class="cart-item-total" data-hook="cart_item_total">
       <%= line_item.display_amount.to_html unless line_item.quantity.nil? %>
