--- a/app/views/sitelogin/_new.html.erb
+++ b/app/views/sitelogin/_new.html.erb
@@ -4,7 +4,7 @@
   <div align="right" class="sitelogin_header">
     <h1>Exclusive<br />
       Pre-Order</h1>
-      <p>Enter your passcode below for early access</p>
+      <p>Please enter your passcode to proceed with your purchase</p>
   </div>
   <div class="not_invited">Not on the earlybird list? <a href="#">Click here</a> to signup for the updates.</div>
   <div class="login_box">
