--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -148,8 +148,9 @@ $("#add-to-cart-button").click(function(event){
         'type': 'inline',
         'href': '#addtocart-popup',
         'width': '720px',
+        'height': '400px',
         'centerOnScroll': true,
-        'autoDimensions':true,
+        'autoDimensions': true,
         'modal': true
     });
 });
