--- a/app/views/sitelogin/_new.html.erb
+++ b/app/views/sitelogin/_new.html.erb
@@ -103,11 +103,12 @@ jQuery( document ).ready(function($) {
 
   $("#invite_phase2").click(function(event){
     event.preventDefault();
-    $.fancybox.close();
     $.fancybox({
         'type': 'inline',
         'href': '#phase2_subscription',
         'width': '720px',
+        'centerOnScroll': true,
+        'autoDimensions': true,
         'modal': true
     });
   });
