--- a/app/views/sitelogin/_new.html.erb
+++ b/app/views/sitelogin/_new.html.erb
@@ -89,7 +89,7 @@
 <script>
 jQuery( document ).ready(function($) {
 
-  var originalFancybox = $.fancybox({
+  window.originalFancybox = $.fancybox({
         'padding': 0,
         'margin': 4,
         'type': 'inline',
@@ -103,7 +103,7 @@ jQuery( document ).ready(function($) {
 
   $("#invite_phase2").click(function(event){
     event.preventDefault();
-    originalFancybox.close();
+    window.originalFancybox.close();
     newfancybox = $.fancybox({
         'type': 'inline',
         'href': '#phase2_subscription',
