--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -73,7 +73,7 @@ $(document).ready(function(){
 </ul>
 <div class="tab_data">
 <div id="tab-1" class="tab-content current-tab">
-<p><img src="<%= <%= asset_path(' mid_banner.jpg') %>" alt="watteam banner" width="100%" /></p>
+<p><img src="<%= asset_path(' mid_banner.jpg') %>" alt="watteam banner" width="100%" /></p>
 <p><strong>With POWERBEAT, you can have it all.</strong>  The self-contained kit puts an end to factory installation and calibration. It's packed with two patent-pending mechanical sensors and intelligent processing units – that when attached to the cranks<sup>1</sup> deliver real (not estimated) left and right leg power metrics.  POWERBEAT is light-weight, durable and consistently accurate enough to be used by professional cyclists – yet affordable enough for amateur and unsponsored cyclists. It's also the first to come with an 80-hour rechargeable battery, and works with any BLE head unit<sup>2</sup>, even a BTE smartphone. <br />
 At last, a professional-grade power meter that anyone can afford!
 <br />
