--- a/app/views/spree/checkout/_payment.html.erb
+++ b/app/views/spree/checkout/_payment.html.erb
@@ -57,10 +57,12 @@
       <% end %>
     </ul>
     <br style="clear:both;" />
+<% if false %>
     <p class='field' data-hook='coupon_code'>
       <%= form.label :coupon_code %><br />
       <%= form.text_field :coupon_code %>
     </p>
+<% end %>
   </div>
 </fieldset>
 
