--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -57,7 +57,7 @@
   You may make your order now to secure a unit, or simply sign up to receive updates.
   </div>
   <div class="cart-popup-btn">
-  <button onclick="windowl.location.href='/products/powerbeat-pro-level-power-meter-spring-2016'" class="large primary">Pre-order now</button>
+  <button onclick="window.location.href='/products/powerbeat-pro-level-power-meter-spring-2016'" class="large primary">Pre-order now</button>
   <button id="invite_phase2" class="large primary" style="float:right;">Receive updates</button>
   </div>
     </div>
@@ -66,7 +66,7 @@
 <script>
 $( document ).ready(function() {
   $.fancybox({
-        'padding': 0,
+        'padding': 5,
         'margin': 4,
         'type': 'inline',
         'href': '#out-of-stock-popup',
