--- a/app/views/newsletter/new.html.erb
+++ b/app/views/newsletter/new.html.erb
@@ -62,7 +62,12 @@
     <div class="response" id="mce-success-response" style="display:none"></div>
   </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;"><input type="text" name="b_a111cc0531d37f010c883cb18_e899ca5112" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    <div class="clear">
+      <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+    </div>
+    <div class="clear">
+      <input type="button" value="Go to Watteam.com" onclick="window.location.href=http://watteam.com;" /> 
+    </div>
     </div>
 </form>
 </div>
