--- a/app/views/sitelogin/_new.html.erb
+++ b/app/views/sitelogin/_new.html.erb
@@ -42,6 +42,7 @@ jQuery( document ).ready(function($) {
         'modal': true
     });
     $('.fancybox-type-inline').css('z-index','10000');
+    $('.fancybox-type-iframe').css('z-index','10000');
   });
 
 
