--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -173,7 +173,9 @@ jQuery( document ).ready(function($) {
         'modal': true
     });
     $('.fancybox-type-inline').css('z-index','10000');
+    $('.fancybox-type-iframe').css('z-index','10000');
   });
+
 
 
 });
