--- a/app/views/newsletter/new.html.erb
+++ b/app/views/newsletter/new.html.erb
@@ -66,7 +66,7 @@
       <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
     </div>
     <div class="clear">
-      <input type="button" value="Go to Watteam.com" onclick="window.location.href=http://watteam.com;" /> 
+      <input type="button" value="Go to Watteam.com" onclick="window.location.href='http://watteam.com';" class="button" /> 
     </div>
     </div>
 </form>
