--- a/app/views/newsletter/new.html.erb
+++ b/app/views/newsletter/new.html.erb
@@ -66,10 +66,17 @@
       <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
     </div>
     <div class="clear">
-      <input type="button" value="Go to Watteam.com" onclick="window.location.href='http://watteam.com';" class="button" /> 
+      <input type="button" value="Go to Watteam.com" id="redirect_watteam" class="button" /> 
     </div>
     </div>
 </form>
 </div>
 <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='MMERGE3';ftypes[3]='address';fnames[4]='MMERGE4';ftypes[4]='phone';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 <!--End mc_embed_signup-->
+<script>
+jQuery(document).ready($){
+  $('#redirect_watteam').on('click',function(){
+    window.location.href='http://watteam.com/';
+  });
+});
+</script>
