--- a/app/views/newsletter/new.html.erb
+++ b/app/views/newsletter/new.html.erb
@@ -74,7 +74,7 @@
 <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='MMERGE3';ftypes[3]='address';fnames[4]='MMERGE4';ftypes[4]='phone';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 <!--End mc_embed_signup-->
 <script>
-jQuery(document).ready($){
+jQuery(document).ready(function($){
   $('#redirect_watteam').on('click',function(){
     window.location.href='http://watteam.com/';
   });
