--- a/app/views/newsletter/new.html.erb
+++ b/app/views/newsletter/new.html.erb
@@ -66,7 +66,7 @@
       <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
     </div>
     <div class="clear">
-      <a href="http://watteam.com"  value="Go to Watteam.com" class="button" >Go to Watteam.com</a> 
+      <a href="http://watteam.com"  value="Go to Watteam.com" class="button" target="_parent" >Go to Watteam.com</a> 
     </div>
     </div>
 </form>
