--- a/app/assets/stylesheets/spree/fancy/shared/_media.scss
+++ b/app/assets/stylesheets/spree/fancy/shared/_media.scss
@@ -194,7 +194,7 @@
       padding: 15px;
 
       img {
-        @include border-radius(80px !important);
+        /*@include border-radius(80px !important);*/
         padding: 10px 0 0 0;
       }
     }
