--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -136,6 +136,7 @@ $( document ).ready(function() {
   </div>
   <div class="cart-popup-btn">
   <button class="large primary" id="add-to-cart-btn" name="button" type="button">Agree &amp; Continue</button>
+  <span class="" style="float:left; display:inline-block; padding: 0px 10px;" > or </span>
   <button class="large primary" id="no-thanks-btn" name="button" type="button">No thanks</button>
   </div>
     </div>
