--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -58,7 +58,8 @@
   </div>
   <div class="cart-popup-btn">
   <button onclick="window.location.href='/products/powerbeat-pro-level-power-meter-spring-2016'" class="large primary">Pre-order now</button>
-  <button id="invite_phase2" class="large primary" style="float:right;">Receive updates</button>
+  <span style="float:left; font-size:14px; font-weight:bold; padding:10px 10px 0px;"> or </span>
+  <button id="invite_phase2" class="large primary" >Receive updates</button>
   </div>
     </div>
 </div>
@@ -66,8 +67,8 @@
 <script>
 $( document ).ready(function() {
   $.fancybox({
-        'padding': 5,
-        'margin': 4,
+        'padding': 10,
+        'margin': 10,
         'type': 'inline',
         'href': '#out-of-stock-popup',
         'width': '720px',
@@ -136,7 +137,7 @@ $( document ).ready(function() {
   </div>
   <div class="cart-popup-btn">
   <button class="large primary" id="add-to-cart-btn" name="button" type="button">Agree &amp; Continue</button>
-  <span class="" style="float:left; display:inline-block; padding: 0px 10px;" > or </span>
+  <span class="" style="float:left; display:inline-block; padding: 0px 10px;padding-top:10px;font-size:14px;font-weight:bold;" > or </span>
   <button class="large primary" id="no-thanks-btn" name="button" type="button">No thanks</button>
   </div>
     </div>
