--- a/app/assets/stylesheets/spree/fancy/components/_product_item.scss
+++ b/app/assets/stylesheets/spree/fancy/components/_product_item.scss
@@ -66,6 +66,7 @@
   li {
     border: none;
     margin-right: 12px;
+    float: left;
 
     a {
       border: 1px solid lighten($body_text_color, 30);
