--- a/app/views/spree/checkout/_address.html.erb
+++ b/app/views/spree/checkout/_address.html.erb
@@ -22,7 +22,7 @@
 <hr class="clear" />
 
 <div class="form-buttons" data-hook="buttons">
-  <%= submit_tag Spree.t(:save_and_continue), :class => 'continue button primary' %>
+  <%= submit_tag "Continue", :class => 'continue button primary' %>
   <% if try_spree_current_user %>
     <span data-hook="save_user_address">
       &nbsp; &nbsp;
