--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -99,7 +99,7 @@ $( document ).ready(function() {
 
         <% if session[:valid_sitelogin] == true %>
   			  <%= button_tag :class => 'large primary', :id => 'add-to-cart-button', :type => :submit do  %>
-  				<%= Spree.t(:add_to_cart) %>
+  				Buy Now
   			  <% end %>
         <% end %>  
 			<% else %>
