--- a/app/assets/stylesheets/spree/frontend/screen.css.scss
+++ b/app/assets/stylesheets/spree/frontend/screen.css.scss
@@ -173,7 +173,7 @@ input[type= "reset"], button, a.button {
   font-weight: bold;
   font-size: $button_font_size;
   font-family: $ff_base;
-  border: 1px solid $button_border_color;
+  /*border: 1px solid $button_border_color;*/
   padding: 6px 10px 5px;
   vertical-align:  top;
 
@@ -184,12 +184,12 @@ input[type= "reset"], button, a.button {
      -moz-box-shadow: inset 0 1px 0 rgba(255,255,255,0.4);
        -o-box-shadow: inset 0 1px 0 rgba(255,255,255,0.4);
           box-shadow: inset 0 1px 0 rgba(255,255,255,0.4);
-  -webkit-border-radius: 0px;
+  /*-webkit-border-radius: 0px;
    -khtml-border-radius: 0px;
      -moz-border-radius: 0px;
       -ms-border-radius: 0px;
        -o-border-radius: 0px;
-          border-radius: 0px;
+          border-radius: 0px;*/
 
   &.large {
     padding: 7px 10px;
