--- a/app/views/sitelogin/_new.html.erb
+++ b/app/views/sitelogin/_new.html.erb
@@ -1,6 +1,6 @@
 
 <div align="center" style="float:left;display:none;" id="sitelogin_popup">
-  
+  <div class="logo_popup"><%= image_tag('powerbeat-logo-blue.png') %></div>  
   <div align="right" class="sitelogin_header">
     <h1>Exclusive<br />
       Pre-Order</h1>
