--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -98,6 +98,7 @@ $( document ).ready(function() {
       </span>
 
 <div class="crank_selector">
+
   <label>Crank Manufacturer:</label>
       <select name="manufacturer">
         <option value="">Please select</option>
@@ -105,7 +106,7 @@ $( document ).ready(function() {
         <option value="FSA">FSA</option>
         <option value="Rotor">Rotor</option>
       </select> 
-
+<br clear="both" />
 <label>Crank Model:</label>
       <select name="model">
   <option value="">Please select</option>
@@ -122,8 +123,9 @@ $( document ).ready(function() {
  <option value="Energy" class="FSA">Energy</option>
  <option value="3D" class="Rotor">Rotor</option>
      </select>
+     <br clear="both" />
      <div>
-      <p>My crank manufacturer and model aren't listed here, <a href="#">contact us</a></p>
+      My crank manufacturer and model aren't listed here, <a href="#">contact us</a>
      </div>
 
 </div>
